# filler

./: .gitignore  CMakeLists.txt  Makefile  main.c  stat.sh  suc_test.txt  test.txt  trouble.txt
includes/: filler.h
libdraw/: CMakeLists.txt  Makefile  draw_line.c  mlx_create.c  put_images.c
libdraw/includes/: colors.h  graphics_base.h  mlx.h
libft/: CMakeLists.txt  Makefile  ft_str_to_file.c  libft.h
ressources-linux/: 1  blavonne.filler  checker.sh  filler.trace  readme.MD  stat.sh
srcs/: cleaner.c  figure_handler.c  figure_place.c  filler_draw.c  filler_loop.c  heatmap.c  keyboard.c  mlx_filler_loop.c  parse_map.c  parse_piece.c  parse_player.c  point_handler.c  solution.c  to_file.c  visualize.c
